--- a/scss/utilids/_mixins.scss
+++ b/scss/utilids/_mixins.scss
@@ -6,7 +6,7 @@
 // -----------------------------
 // Spacing setup
 // -----------------------------
-$spaces: 0, 4px, 8px, 12px, 16px, 20px, 24px, 28px,32px, 48px, 64px, 96px,192px;
+$spaces: 0, 4px, 8px, 12px, 16px, 20px, 24px, 28px,32px, 48px, 64px,84px, 96px,192px;
 
 $space-map: ();
 
