--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -22,6 +22,16 @@
 
   // }
 }
+.container2{
+  width: 100%;
+  max-width: 1000px;
+  margin:0 auto;
+}
+.container3{
+   width: 100%;
+  max-width: 1200px;
+  margin:0 auto;
+}
 
 .flex {
   display: flex;
