--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,9 +3,12 @@
 @import"utilids/mixins";
 @import"base/global";
 @import"base/typography";
-
 @import "layout/header";
+@import "layout/footer";
 @import "components/cards";
 @import "components/buttons";
 @import "pages/homepage";
-
+@import "pages/magazine";
+@import "pages/detail";
+@import "pages/podcast";
+@import "pages/authors";
