--- a/scss/pages/_homepage.scss
+++ b/scss/pages/_homepage.scss
@@ -4,6 +4,9 @@
     overflow: hidden;
     background: #000;
 }
+.hero-title{
+    letter-spacing: 2px;
+}
 
 .banner-container {
     width: 100%;
@@ -161,5 +164,5 @@
   padding-bottom: 192px;
 }
 .pocast-header{
-   justify-content: space-between;
+    justify-content: space-between;
 }
