--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -10,6 +10,7 @@
 
 .footer-section {
     display: flex;
+    justify-content: end;
     align-items: center;
     gap:250px;
     color: $primary-color-white;
@@ -17,19 +18,48 @@
     line-height: 110%;
     text-transform: uppercase;
     font-family: "GeneralSans-bold";
+    @include responsive("xl") {
+gap:10px;
+font-size: 70px;
+
+
+  }
+   @include responsive("lg") {
+flex-direction: column;
+font-size: 60px;
+text-align: center;
+
+  }
+      @include responsive("md") {
+text-align:unset;
+font-size: 45px;
+  gap: 20px;
+  }
 }
+
 
 .footer-signup-form {
     display: flex;
     width: 450px;
     gap:12px;
+      @include responsive("md") {
+width: 100%;
+
+  
+  }
 }
 .footer-signup-row {
   display: flex;
   gap: 12px;
-  align-items: end;
+  justify-content: end;
  
   width: 446px;
+      @include responsive("md") {
+width: 83%;
+
+  
+  }
+}
 
   input {
     width: 67%;
@@ -47,7 +77,7 @@
     }
 
   }
-}
+
 .footer-content{
     display: flex;
     flex-direction: column;
@@ -63,12 +93,23 @@
 .footer-links{
     display: flex;
     justify-content: space-between;
+      @include responsive("md") {
+flex-direction: column;
 
+  
+  }
 }
+
+
 .footer-row{
     display: flex;
     width: 65%;
     gap:64px;
+      @include responsive("md") {
+flex-direction: column;
+
+  
+  }
 }
 .footer-col{
     display: flex;
