--- a/scss/pages/_authors.scss
+++ b/scss/pages/_authors.scss
@@ -1,10 +1,15 @@
 .author-container {
-    padding: 96px 0;
+    padding: 48px 0;
 }
+
 .author-item-cont{
     border-bottom: 1px solid $primary-color-black;
-    padding: 48px 0;
-    transition: 0.3s
+    padding: 48px 5px;
+    transition: 0.3s;
+  overflow: hidden;
+}
+.author-item-cont:last-of-type{
+    border-bottom:none ;
 }
 .author-info-cont{
     gap:48px;
@@ -12,8 +17,20 @@
 .podcaast-meta-info{
     flex: 1;
 }
-.author-item-cont:hover {
-    background-color: #f5f5f5; 
-    transform: translateY(-3px); 
-    box-shadow: 0 4px 12px rgba(0,0,0,0.1); 
-border: none;}
+
+
+.author-item-cont:hover .next-page {
+  color: rgba(0, 0, 0, 0.8);
+  transform: translateX(3px);
+  
+}
+.author-img {
+  transition: transform 0.3s ease;
+}
+
+.author-item-cont:hover .author-img {
+  transform: scale(1.05);
+}
+.author-meta{
+  gap:96px;
+}
