--- a/scss/pages/_detail.scss
+++ b/scss/pages/_detail.scss
@@ -22,12 +22,18 @@
    
     gap: 24px; 
 }
+.article-cover{
+      overflow: hidden;
+  object-fit: contain;
+    width: 100%;
+     @include aspectRatio(1530, 880);
+}
 
 .article-paragraph {
     display: flex;
     flex-direction: column;
     gap: 24px; 
-    padding-bottom: 24px;
+   
 }
 .article-quote{
     gap:24px;
@@ -39,10 +45,11 @@
     }
 }
 .detail-article{
-    margin-bottom: 215px;
+    margin-bottom:192px;
 }
 .new-add{
     margin-bottom: 192px;
+    border-top:1px solid $primary-color-black ;
 }
 /*podcast detail*/
 .article-header{
@@ -54,7 +61,7 @@
 .pod-cont-detail{
     left: 0;
     justify-content: space-between;
-    padding: 0 36px;
+    padding: 19px 36px;
 }
 .podcast-info{
     gap:32px;
@@ -84,7 +91,7 @@
 .author-make-item{
     width: 50%;
     border: 1px solid $primary-color-black;
-    gap:38px;
+    gap:48px;
     transition: 0.3s;
 }
 .author-make-img{
@@ -98,8 +105,7 @@
     justify-content: center;
 }
 .author-make-item:hover {
-    background-color: #f5f5f5; 
-    transform: translateY(-4px); 
+border:1px solid rgba(0,0,0,0.1) ;
     box-shadow: 0 8px 20px rgba(0,0,0,0.1); 
 }
 
