--- a/scss/pages/_homepage.scss
+++ b/scss/pages/_homepage.scss
@@ -21,18 +21,66 @@
 .banner-item {
     white-space: nowrap;
 }
+.cover {
+  width: 100%;
+  max-width: 1500px;
+  overflow: hidden;
+  object-fit: contain;
+     width: 100%;
+         @include aspectRatio(1520, 1013);
 
+  @include responsive("xl") {
+    max-width: 1200px;
+  }
+
+  @include responsive("lg") {
+max-width: 800px;
+  }
+
+  @include responsive("md") {
+    max-width: 720px;
+  }
+
+  @include responsive("sm") {
+    max-width: 100%;
+  }
+}
+.cover-text{
+    @include responsive("lg") {
+flex-direction: column-reverse;
+  }
+}
 .site-header-cont {
     width: 100%;
+ @include responsive("xl") {
+   flex-direction: column;
+   gap:20px;
+  }
 
     h2 {
         width: 50%;
+         @include responsive("xl") {
+   width: 100%;
+   text-align: center;
+  }
     }
+}
+.artic{
+  margin-bottom: 87px;
 }
 
 .site-header-article {
     width: 50%;
     gap: 64px;
+     @include responsive("xl") {
+   width: 100%;
+   padding: 0;
+   gap:12px;
+  }
+    p{
+         @include multilineElipsis(4);
+
+    }
 }
 
 .main-content {
@@ -42,16 +90,29 @@
 .main-content-cont {
     display: flex;
     gap: 96px;
+     @include responsive("xl") {
+    flex-direction: column;
+    gap:0;
+ 
+  }
 }
 
 .main-content-info {
-    width: 70%;
+    width: 69.41%;
+      @include responsive("xl") {
+
+    width: 100%;
+  }
 }
 
 .aside-content {
     gap: 64px;
-    padding: 48px 0;
+    padding: 56px 0;
     flex: 1;
+       @include responsive("xl") {
+        padding:0;
+
+  }
 }
 
 .aside-header-text {
@@ -60,6 +121,10 @@
 
 .aside-header {
     gap: 32px;
+       @include responsive("xl") {
+
+    display: none;
+  }
 }
 
 .rating {
@@ -67,6 +132,9 @@
     display: flex;
     flex-direction: column;
     gap: 32px;
+      @include responsive("xl") {
+   margin-top: 35px;
+  }
 }
 
 .rating-item {
@@ -147,11 +215,13 @@
   color: $primary-color-black; 
   text-decoration: none;
   transition: all 0.3s ease;
-
-  &:hover {
-    color: rgba(0, 0, 0, 0.7);   
-    transform: translateX(3px);    
+}
+.all-article{
+    @include responsive("xl") {
+margin-top: 35px;
   }
+
+  
 
  
 }
