--- a/scss/pages/_magazine.scss
+++ b/scss/pages/_magazine.scss
@@ -15,24 +15,25 @@
 }
 
 .magazin-list-item { 
-    width:33% ; 
+    width:33.33% ; 
     display: flex;
     flex-direction: column;
     padding: 48px;
     overflow: hidden;
+       border: 1px solid $primary-color-black;
     text-decoration: none;
     color: #000;
     align-items: center;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-        border: 1px solid $primary-color-black;
         gap:32px;
 
 }
 
 .magazin-list-item:hover {
-    transform: translateY(-5px);
+  background-color: whitesmoke;
     box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-    border: none;
+    border: 1px white solid;
+     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 .item-header{
       width: 100%;
