--- a/scss/pages/_podcast.scss
+++ b/scss/pages/_podcast.scss
@@ -1,9 +1,14 @@
 .podcast-sections {
     padding-bottom: 192px;
+  
 }
 .podcast-item-cont{
     border-bottom: 1px solid $primary-color-black ;
     padding: 48px 0;
+    &:first-child{
+        margin-top: 144px;
+    }
+  
 }
 .podcast-item-cont:last-child{
     border: none;
@@ -22,11 +27,7 @@ width: 350px;
     gap:64px;
     align-items: center;
 }
-.pod-cont-gap{
-    gap:100px;
-    bottom:15px;
-    align-items: center;
-}
+
 .podcaast-meta-info {
     width: 50%;
     display: flex;
@@ -35,8 +36,11 @@ width: 350px;
  justify-content: end;
  gap:64px;
 }
-.podcast-item-cont:hover {
-    background-color: #f5f5f5;
-    transition: 0.3s ease;
-    
+.podcast-item-cont:hover .next-page {
+  color: rgba(0, 0, 0, 0.8);
+  transform: translateX(3px);
+  
 }
+
+
+
