--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -41,7 +41,11 @@
   &:hover {
     background-color: #9fa19b
   }
+   @include responsive("sm") {
+   padding: 7px;
+  }
 }
+
 
 .next-page-btn {
 
