--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -1,106 +1,133 @@
-.main-content-card{
-    width: 100%;
-    display: flex;
-    gap:48px;
-    align-items: start;
-    padding-bottom: 96px;
-    padding-top: 56px;
-    border-bottom: 1px solid $primary-color-black;
-    &:last-child{
-      border: none;
-    }
-     @include responsive("lg") {
-gap:20px;
+.main-content-card {
+  width: 100%;
+  display: flex;
+  gap: 48px;
+  align-items: start;
+  padding-bottom: 96px;
+  padding-top: 56px;
+  border-bottom: 1px solid $primary-color-black;
+
+  &:last-child {
+    border: none;
+  }
+
+  @include responsive("lg") {
+    gap: 20px;
+    flex-direction: column;
+
+  }
+}
+
+.card-article-text {
+  display: flex;
   flex-direction: column;
-
-  }
-
-
+  gap: 12px;
 }
 
-.card-article-text{
-    display: flex;
-    flex-direction: column;
-    gap:12px;
-}
 .card-article {
-    display: flex;
-    flex-direction: column;
-    flex:1;
-    gap:71px;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  gap: 71px;
+  height: 100%;
 
 }
-.card-details{
-    display: flex;
-    align-items: center;
-    justify-content:space-between;
+
+.card-details {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
+
 .details {
-    gap: 24px;
-    display: flex;
-    align-items: center;
-
-  }
-.pod-det{
-  gap:16px;
-   @include responsive("xl") {
- justify-content: space-between;
-
-  }
-  span{
-     @include responsive("xl") {
- font-size: 20px;
-
+  gap: 24px;
+  display: flex;
+  align-items: center;
+   @include responsive("sm") {
+    
+      flex-direction: column;
+align-items: baseline;
   }
 
-  }
-}
-.auth-det{
-  gap:32px;
   
 }
-.meta-item {
-    gap: 8px;
-    display: flex;
-    align-items: center;
-}
-.card-img{
-    width: 240px;
-    transition: transform 0.3s ease;
-    @include aspectRatio(240, 240);
-    @include responsive("lg") {
- width: 80%;
- margin: auto;
-    }
-
-
-}
-  .card-img:hover{
-transform: scale(1.05);
-        }
-.poster-img{
-      @include aspectRatio(369, 461)
-}
-.poster-cont{
-    position: relative;
-}
-.poster-text{
-    position: absolute;
-    top:36px;
-    left: 36px;
-    gap:8px;
+.article-details{
     
 }
-.date{
-    position: absolute;
-    bottom: 26px;
-    left: 33px;
+
+.pod-det {
+  gap: 16px;
+
+  @include responsive("xl") {
+    justify-content: space-between;
+
+  }
+
+  span {
+    @include responsive("xl") {
+      font-size: 20px;
+
+    }
+
+  }
 }
-.poster-arrow{
-     position: absolute;
-     bottom: 33px;
-     right: 28px;
+
+.auth-det {
+  gap: 32px;
+
+}
+
+.meta-item {
+  gap: 8px;
+  display: flex;
+  align-items: center;
+}
+
+.card-img {
+  width: 240px;
+  transition: transform 0.3s ease;
+  @include aspectRatio(240, 240);
+
+  @include responsive("lg") {
+    width: 80%;
+    margin: auto;
+  }
+
+
+}
+
+.card-img:hover {
+  transform: scale(1.05);
+}
+
+.poster-img {
+  @include aspectRatio(369, 461)
+
+}
+
+.poster-cont {
+  position: relative;
+}
+
+.poster-text {
+  position: absolute;
+  top: 36px;
+  left: 36px;
+  gap: 8px;
+  
+
+}
+
+.date {
+  position: absolute;
+  bottom: 26px;
+  left: 33px;
+}
+
+.poster-arrow {
+  position: absolute;
+  bottom: 33px;
+  right: 28px;
 }
 
 .card-headline {
@@ -121,12 +148,12 @@ transform: scale(1.05);
   align-items: center;
   justify-content: center;
   gap: 8px;
-  padding: 70px; 
+  padding: 70px;
   border-radius: 50%;
   background-color: $secondary-color-yellow;
   text-align: center;
   box-sizing: border-box;
-   transform: rotate(-15deg); 
+  transform: rotate(-15deg);
   transform-origin: center;
   bottom: 60px;
   left: 10px;
@@ -156,11 +183,11 @@ transform: scale(1.05);
   }
 
   &__line {
-    position: absolute;      
-    bottom: 40px;              
-    left: 50%;                
-    transform: translateX(-50%); 
-    width: 70px;              
+    position: absolute;
+    bottom: 40px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 70px;
     height: 2px;
     background-color: $primary-color-white;
     border-radius: 1px;
@@ -169,126 +196,155 @@ transform: scale(1.05);
 
 
 /*podcast card*/
-.list-item{
+.list-item {
   padding: 48px;
-  
+
 }
 
 
-.img-cont{
- 
+.img-cont {
+
   position: relative;
 }
-.podcast-text{
+
+.podcast-text {
   top: 36px;
   left: 36px;
-  gap:5px;
+  gap: 5px;
+  @include responsive("sm") {
+    top:11px;
+    left: 11px;
+  }
 }
+
 .pod-cont {
-    width: 100%;
-    bottom: 0px;
-    justify-content: space-between;
-    align-items: center;}
-.pod-subtitle{
-  gap:5px;
+  width: 100%;
+  bottom: 0px;
+  justify-content: space-between;
+  align-items: center;
+   @include responsive("sm") {
+   padding: 11px;
+  }
 }
-.podcast-detail{
-margin-top: 32px;
+
+.pod-subtitle {
+  gap: 5px;
+}
+
+.podcast-detail {
+  margin-top: 32px;
   display: flex;
   flex-direction: column;
-gap:48px;
-h2{
-  @include multilineElipsis(3);
-      line-height: 1.1
+  gap: 48px;
 }
-  @include responsive("md") {
-font-size: 25px;
-}}
+  .headline-2{
+    @include multilineElipsis(3);
+    line-height: 1.1
+    
+  }
+
 .podcast-list {
   display: flex;
   width: 100%;
   flex-wrap: wrap;
+
   @include responsive("xl") {
-gap:20px;
-  }
-  a{
-    width: 33.33%;
-        border: 1px solid $primary-color-black;
-     border-right: none;
-      @include responsive("xl") {
- width: 100%;
-  border-right: 1px solid $primary-color-black;
+    gap: 20px;
   }
 
-       &:last-child {
+  a {
+    width: 33.33%;
+    border: 1px solid $primary-color-black;
+    border-right: none;
+
+    @include responsive("xl") {
+      width: 100%;
       border-right: 1px solid $primary-color-black;
     }
-   
+
+    &:last-child {
+      border-right: 1px solid $primary-color-black;
+    }
+
   }
 }
-.podcast-img{
-  width: 100%;
-        @include aspectRatio(407, 407)
 
+.podcast-img {
+  width: 100%;
+  @include aspectRatio(407, 407)
 }
 
 
 /* authors card*/
-.author-list-cont{
+.author-list-cont {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
 }
+
 .author-list-item {
   width: 50%;
   border: 1px solid $primary-color-black;
   cursor: pointer;
-     @include responsive("xl") {
- width: 100%;
-  border-right: 1px solid $primary-color-black;
+
+  @include responsive("xl") {
+    width: 100%;
+    border-right: 1px solid $primary-color-black;
   }
 
   &:nth-child(odd) {
     border-right: none;
+
     @include responsive("xl") {
 
-  border-right: 1px solid $primary-color-black;
+      border-right: 1px solid $primary-color-black;
+    }
   }
-  }
-   &:not(:nth-last-child(-n + 2)) {
+
+  &:not(:nth-last-child(-n + 2)) {
     border-bottom: none;
   }
 }
 
-.author-item{
+.author-item {
   padding: 32px;
   width: 100%;
   display: flex;
   align-items: center;
-  gap:48px;
+  gap: 48px;
+   @include responsive("sm") {
+      flex-direction: column;
+        
+    }
 
 }
-.author-img{
+
+.author-img {
   width: 150px;
-     @include aspectRatio(150, 150);
-     img{
-      border-radius: 50%;
-     }
+  @include aspectRatio(150, 150);
+
+  img {
+    border-radius: 50%;
+  }
 }
-.author-text{
+
+.author-text {
   display: flex;
   flex-direction: column;
-  gap:16px;
-    @include responsive("xl") {
-flex-direction: row;
-justify-content: space-between;
-width: 80%;
+  gap: 16px;
 
-  
+  @include responsive("xl") {
+    flex-direction: row;
+    justify-content: space-between;
+    width: 80%;
+
+
   }
-    @include responsive("md") {
-flex-direction: column;
 
-  
+
+    @include responsive("md") {
+    flex-direction: column;
+align-items: center;
+
   }
 }
