--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -59,6 +59,10 @@ width: 83%;
 
   
   }
+   @include responsive("sm") {
+  width: 100%;
+  justify-content: start;
+  }
 }
 
   input {
@@ -141,6 +145,13 @@ flex-direction: column;
 .footer-copyright{
     display: flex;
     justify-content: space-between;
+    
+     @include responsive("sm") {
+flex-direction: column;
+gap: 15px;
+  
+  }
+
     p{
     
   font-size: 14px;
